# pixelify

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  alawadhiBOT_cmds.txt  alawadhiBOT_run_file.bash  base-build.sh  docker-compose.yml  dockerfile  dockerfile.base  example.webm  full-build.sh  imgui.ini  kernel.cu  kernel.h  main.cu  parse.h  pixel.h  pixelify.sh  reduce.cu  reduce.h  run-dockerized.sh  sanitize.sh  stb_image.h  stb_image_write.h  test_normalization.py  test_reduction.py  tests.cu
.github/workflows/: cmake-single-platform.yml
include/: analytics.h  filter.h  filter_impl.h  filters.h  gui.h  kernel.cuh  kernel.h  kernel_formulas.h  pixel.h  reduce.cuh  reduce.h  sharedmem.cuh
includes/: filter.h  gui.cuh  gui.h  kernel.h  reduce.h
libpng/: .appveyor.yml  .travis.yml  CMakeLists.txt  autogen.sh  configure  configure.ac  libpng-manual.txt  libpng.3  libpngpf.3  png.5
libpng/ci/: ci_verify_cmake.sh  ci_verify_configure.sh  ci_verify_makefiles.sh
libpng/contrib/libtests/: pngvalid.c
libpng/contrib/tools/: pngfix.c
libpng/scripts/: genout.cmake.in  gensrc.cmake.in  libpng-config-head.in  libpng.pc.in  pnglibconf.dfa
src/: analytics.cpp  filter.cu  filter_impl.cpp  filter_impl.cu  filters.cpp  filters.cu  gui.cpp  gui.cu  kernel.cu  kernel_formulas.cpp  kernel_formulas.cu  main.cpp  main.cu  render.cpp  render.cu
templates/: apply_filter.cuh  filter_kernel.cuh  image_reduction.cuh  instantiations.cuh  normalize.cuh  normalize_pixel.cuh  other_kernel.cuh  run_kernel.cuh
tests/: sanitize.sh  test_reduction.py  tests.cu
